--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongoose": "^8.3.3",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.17",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
