Added login form

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.17",
+    "next-auth": "^5.0.0-beta.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +20,7 @@
     "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
